--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,127 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Bootstrap Stylesheet -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="../css/styles.css" />
+		<title>Blog</title>
+		<link rel="shortcut icon" href="../images/logo.png" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
-    <title>Blog</title>
-    <link rel="shortcut icon" href="../images/logo.png">
-</head>
+	<body>
+		<!-- Navbar -->
+		<header class="sticky-top">
+			<nav class="navbar navbar-expand-lg navbar-dark">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="../index.html"
+						><img
+							src="../images/logoCarpooleo.svg"
+							alt="logo"
+							class="logo whiteSvg"
+					/></a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarToggler"
+						aria-controls="navbarTogglerDemo02"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarToggler">
+						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+							<li class="nav-item ms-4">
+								<a
+									class="nav-link"
+									aria-current="page"
+									href="../index.html"
+									>Inicio</a
+								>
+							</li>
+							<li class="nav-item ms-4">
+								<a class="nav-link" href="sobreNosotros.html"
+									>Sobre Nosotros</a
+								>
+							</li>
+							<li class="nav-item ms-4">
+								<a class="nav-link" href="producto.html"
+									>Producto</a
+								>
+							</li>
+							<li class="nav-item ms-4">
+								<a class="nav-link" href="blog.html">Blog</a>
+							</li>
+							<li class="nav-item ms-4">
+								<a class="nav-link" href="contacto.html"
+									>Contacto</a
+								>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
 
-<body>
-        <!-- Navbar -->
-        <header class="sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarToggler">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item ms-4">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item ms-4">
-                        <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
-                        </li>
-                        <li class="nav-item ms-4">
-                        <a class="nav-link" href="producto.html">Producto</a>
-                        </li>
-                        <li class="nav-item ms-4">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                        </li>
-                        <li class="nav-item ms-4">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                    </div>
-                </div>
-                </nav>
-        </header>
+		<!-- Content -->
+		<section class="blogSection">
+			<h2 class="blogTitle">Blog Carpoolero</h2>
+			<p class="blogDescription">
+				El lugar para conseguir noticias, actualizaciones y opiniones
+				del equipo de Carpooleo
+			</p>
+			<article class="blogArticle">
+				<p>20 de Octubre, 2021</p>
+				<h3>Carpooleo en la ultima fase de desarrollo</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin volutpat massa vel nibh ultrices facilisis. Donec
+					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
+					faucibus rutrum fermentum. Mauris volutpat quam a
+					condimentum iaculis. Nam fringilla nibh lacinia aliquam
+					sodales. In ullamcorper lorem eget ligula lobortis, et
+					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
+					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
+					euismod quis, pharetra eget quam. Nunc ornare ultricies
+					porta. Proin quis nisl consectetur, fringilla sem viverra,
+					congue felis.
+				</p>
+			</article>
+			<article class="blogArticle">
+				<p>16 de Agosto, 2021</p>
+				<h3>Carpooleo esta en beta 1.3</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin volutpat massa vel nibh ultrices facilisis. Donec
+					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
+					faucibus rutrum fermentum. Mauris volutpat quam a
+					condimentum iaculis. Nam fringilla nibh lacinia aliquam
+					sodales. In ullamcorper lorem eget ligula lobortis, et
+					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
+					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
+					euismod quis, pharetra eget quam. Nunc ornare ultricies
+					porta. Proin quis nisl consectetur, fringilla sem viverra,
+					congue felis.
+				</p>
+			</article>
+			<article class="blogArticle">
+				<p>6 de Julio, 2021</p>
+				<h3>Nuestra inpiración</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin volutpat massa vel nibh ultrices facilisis. Donec
+					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
+					faucibus rutrum fermentum. Mauris volutpat quam a
+					condimentum iaculis. Nam fringilla nibh lacinia aliquam
+					sodales. In ullamcorper lorem eget ligula lobortis, et
+					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
+					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
+					euismod quis, pharetra eget quam. Nunc ornare ultricies
+					porta. Proin quis nisl consectetur, fringilla sem viverra,
+					congue felis.
+				</p>
+			</article>
+			<article class="blogArticle">
+				<p>1 de Abril, 2021</p>
+				<h3>Carpooleo comienza su desarrollo</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin volutpat massa vel nibh ultrices facilisis. Donec
+					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
+					faucibus rutrum fermentum. Mauris volutpat quam a
+					condimentum iaculis. Nam fringilla nibh lacinia aliquam
+					sodales. In ullamcorper lorem eget ligula lobortis, et
+					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
+					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
+					euismod quis, pharetra eget quam. Nunc ornare ultricies
+					porta. Proin quis nisl consectetur, fringilla sem viverra,
+					congue felis.
+				</p>
+			</article>
+		</section>
 
-        <!-- Contenido -->
-            <section class="blogSection">
-                <h2 class="blogTitle">Blog Carpoolero</h2>
-                <p class="blogDescription">El lugar para conseguir noticias, actualizaciones y opiniones del equipo de Carpooleo
-                </p>
-                <article class="blogArticle">
-                    <p>20 de Octubre, 2021</p>
-                    <h3>Carpooleo en la ultima fase de desarrollo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat massa vel nibh ultrices
-                        facilisis. Donec tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed faucibus rutrum fermentum.
-                        Mauris volutpat quam a condimentum iaculis. Nam fringilla nibh lacinia aliquam sodales. In ullamcorper
-                        lorem eget ligula lobortis, et facilisis lorem malesuada. Ut sed metus bibendum, malesuada turpis ac,
-                        lacinia elit. Vivamus dolor arcu, consequat ut euismod quis, pharetra eget quam. Nunc ornare ultricies
-                        porta. Proin quis nisl consectetur, fringilla sem viverra, congue felis.</p>
-                </article>
-                <article class="blogArticle">
-                    <p>16 de Agosto, 2021</p>
-                    <h3>Carpooleo esta en beta 1.3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat massa vel nibh ultrices
-                        facilisis. Donec tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed faucibus rutrum fermentum.
-                        Mauris volutpat quam a condimentum iaculis. Nam fringilla nibh lacinia aliquam sodales. In ullamcorper
-                        lorem eget ligula lobortis, et facilisis lorem malesuada. Ut sed metus bibendum, malesuada turpis ac,
-                        lacinia elit. Vivamus dolor arcu, consequat ut euismod quis, pharetra eget quam. Nunc ornare ultricies
-                        porta. Proin quis nisl consectetur, fringilla sem viverra, congue felis.</p>
-                </article>
-                <article class="blogArticle">
-                    <p>6 de Julio, 2021</p>
-                    <h3>Nuestra inpiración</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat massa vel nibh ultrices
-                        facilisis. Donec tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed faucibus rutrum fermentum.
-                        Mauris volutpat quam a condimentum iaculis. Nam fringilla nibh lacinia aliquam sodales. In ullamcorper
-                        lorem eget ligula lobortis, et facilisis lorem malesuada. Ut sed metus bibendum, malesuada turpis ac,
-                        lacinia elit. Vivamus dolor arcu, consequat ut euismod quis, pharetra eget quam. Nunc ornare ultricies
-                        porta. Proin quis nisl consectetur, fringilla sem viverra, congue felis.</p>
-                </article>
-                <article class="blogArticle">
-                    <p>1 de Abril, 2021</p>
-                    <h3>Carpooleo comienza su desarrollo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat massa vel nibh ultrices
-                        facilisis. Donec tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed faucibus rutrum fermentum.
-                        Mauris volutpat quam a condimentum iaculis. Nam fringilla nibh lacinia aliquam sodales. In ullamcorper
-                        lorem eget ligula lobortis, et facilisis lorem malesuada. Ut sed metus bibendum, malesuada turpis ac,
-                        lacinia elit. Vivamus dolor arcu, consequat ut euismod quis, pharetra eget quam. Nunc ornare ultricies
-                        porta. Proin quis nisl consectetur, fringilla sem viverra, congue felis.</p>
-                </article>
-            </section>
-        
+		<!-- Footer -->
+		<footer>
+			<article>
+				<a href=""
+					><img
+						src="../images/instagram.svg"
+						alt="Instagram"
+						class="icon whiteSvg"
+				/></a>
+				<a href=""
+					><img
+						src="../images/youtube.svg"
+						alt="YouTube"
+						class="icon whiteSvg"
+				/></a>
+				<a href=""
+					><img
+						src="../images/twitter.svg"
+						alt="Twitter"
+						class="icon whiteSvg"
+				/></a>
+			</article>
 
-        <!-- Pie de pagina -->
-        <footer>
-            <article>
-                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg"></a>
-                <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg"></a>
-                <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg"></a>
-            </article>
+			<section>
+				<ul class="footerLinks">
+					<li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+					<li><a href="producto.html">Producto</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+				</ul>
+			</section>
+			<section class="newsletter">
+				<p>Suscribite a nuestro Newsletter</p>
+				<input type="email" placeholder="Email..." />
+				<button>Suscribite</button>
+			</section>
+			<section class="downloads">
+				<article>
+					<p>Descarga la app</p>
+					<a href=""
+						><img
+							src="../images/googlePlay.svg"
+							alt=""
+							class="downloadApp"
+					/></a>
+					<a href=""
+						><img
+							src="../images/AppStore.svg"
+							alt=""
+							class="downloadApp"
+					/></a>
+				</article>
+			</section>
+		</footer>
 
-            <section>
-                <ul class="footerLinks">
-                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
-                    <li><a href="producto.html">Producto</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </section>
-            <section class="newsletter">
-                <p>Suscribite a nuestro Newsletter</p>
-                <input type="email" placeholder="Email...">
-                <button>Suscribite</button>
-            </section>
-            <section class="downloads">
-                <article>
-                    <p>Descarga la app</p>
-                    <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp"></a>
-                    <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp"></a>
-                </article>
-            </section>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-</body>
-
+        <!-- Animation Script -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
