--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,7 +11,8 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/styles.css" />
+		<!-- <link rel="stylesheet" href="../css/styles.css" /> -->
+		<link rel="stylesheet" href="../css/scssStyles.css"/>
 		<title>Blog</title>
 		<link rel="shortcut icon" href="../images/logo.png" />
 	</head>
