--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,8 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/styles.css" />
+		<!-- <link rel="stylesheet" href="../css/styles.css" /> -->
+		<link rel="stylesheet" href="../css/scssStyles.css"/>
 		<title>Contacto</title>
 		<link rel="shortcut icon" href="../images/logo.png" />
 	</head>
@@ -80,7 +81,7 @@
 			</h2>
 		</section>
 
-		<section class="contactSection">
+		<section class="formSection">
 			<article>
 				<form action="#">
 					<fieldset class="contactForm whiteBackground">
