--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarToggler">
-						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<ul class="navbar-nav ms-auto mb-lg-0">
 							<li class="nav-item ms-4">
 								<a
 									class="nav-link"
