--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Description y keywords -->
+		<meta name="description" content="Carpooleo es una aplicación con el objetivo de conectar personas entre ellas para compartir vehículo y ahorrar dinero a la hora de viajar">
+		<meta name="keywords" content="VIAJE, AHORRAR DINERO, COMPARTIR VEHICULO, BUSCAR PASAJEROS, BUSCAR CONDUCTOR, APLICACION, DESCARGAR APLICACION">
 		<!-- AOS Framework Stylesheet -->
 		<link
 			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
@@ -171,19 +174,19 @@
 					><img
 						src="images/instagram.svg"
 						alt="Instagram"
-						class="icon whiteSvg"
+						class="iconinstagram"
 				/></a>
 				<a href=""
 					><img
 						src="images/youtube.svg"
 						alt="YouTube"
-						class="icon whiteSvg"
+						class="iconYoutube"
 				/></a>
 				<a href=""
 					><img
 						src="images/twitter.svg"
 						alt="Twitter"
-						class="icon whiteSvg"
+						class="iconTwitter"
 				/></a>
 			</article>
 			<section>
