--- a/pages/producto.html
+++ b/pages/producto.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Descripcion -->
+		<meta name="description" content="Descubre nuestra aplicación y descárgala">
 		<!-- AOS Framework Stylesheet -->
 		<link
 			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
