--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Descripcion -->
+		<meta name="description" content="Aprenda más sobre Carpooleo y conozca nuestra historia">
 		<!-- Bootstrap Stylesheet -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
