--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
 		<!-- Content -->
 
 		<article class="container404">
-            <img src="" alt="">
+            <img src="images/404.png" alt="Error Image" class="img404">
 			<h2>404 -La página que buscas no fue encontrada</h2>
 			<p>
 				Lo sentimos pero parece que la página que buscas no se encuentra
@@ -93,7 +93,7 @@
 			</p>
 			<div>
 				<a href="index.html">
-					<button class="bannerButtonPrimary">Volver a Inicio</button>
+					<button class="bannerButtonPrimary marginButton404">Volver a Inicio</button>
 				</a>
 			</div>
 		</article>
