--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
 					><img
 						src="images/instagram.svg"
 						alt="Instagram"
-						class="iconinstagram"
+						class="icon whiteSvg"
 				/></a>
 				<a href=""
 					><img
 						src="images/youtube.svg"
 						alt="YouTube"
-						class="iconYoutube"
+						class="icon whiteSvg"
 				/></a>
 				<a href=""
 					><img
 						src="images/twitter.svg"
 						alt="Twitter"
-						class="iconTwitter"
+						class="icon whiteSvg"
 				/></a>
 			</article>
 			<section>
