borrado del ultimo lorem

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,15 +5,18 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Descripcion -->
-		<meta name="description" content="Aqui se encuentran las ultimas noticias sobre Carpooleo">
-        <!-- Bootstrap Stylesheet -->
+		<meta
+			name="description"
+			content="Aqui se encuentran las ultimas noticias sobre Carpooleo"
+		/>
+		<!-- Bootstrap Stylesheet -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/scssStyles.css"/>
+		<link rel="stylesheet" href="../css/scssStyles.css" />
 		<title>Blog</title>
 		<link rel="shortcut icon" href="../images/logo.png" />
 	</head>
@@ -85,68 +88,61 @@
 				<p>20 de Octubre, 2021</p>
 				<h3>Carpooleo en la ultima fase de desarrollo</h3>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Proin volutpat massa vel nibh ultrices facilisis. Donec
-					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
-					faucibus rutrum fermentum. Mauris volutpat quam a
-					condimentum iaculis. Nam fringilla nibh lacinia aliquam
-					sodales. In ullamcorper lorem eget ligula lobortis, et
-					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
-					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
-					euismod quis, pharetra eget quam. Nunc ornare ultricies
-					porta. Proin quis nisl consectetur, fringilla sem viverra,
-					congue felis.
+					Queridos usuarios, gracias a todos los testers y el gran
+					esfuerzo de nuestro equipo puedo confirmar que la aplicación
+					está casi lista para su lanzamiento en Invierno 2022, quiero
+					invitarlos a anotarse en la beta a los interesados que
+					todavía no lo hicieron y agradecer a aquellos que ya lo
+					hicieron, la beta es una gran parte de nuestro testing para
+					garantizar una buena experiencia de usuario y minimizar los
+					problemas del futuro
 				</p>
 			</article>
 			<article class="blogArticle">
 				<p>16 de Agosto, 2021</p>
 				<h3>Carpooleo esta en beta 1.3</h3>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Proin volutpat massa vel nibh ultrices facilisis. Donec
-					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
-					faucibus rutrum fermentum. Mauris volutpat quam a
-					condimentum iaculis. Nam fringilla nibh lacinia aliquam
-					sodales. In ullamcorper lorem eget ligula lobortis, et
-					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
-					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
-					euismod quis, pharetra eget quam. Nunc ornare ultricies
-					porta. Proin quis nisl consectetur, fringilla sem viverra,
-					congue felis.
+					Buenas noticias! A partir de hoy los que quieran inscribirse
+					como testers de la aplicación son bienvenidos a hacerlo, el
+					desarrollo viene constante pero hay varias cosas en la cual
+					nos interesa el feedback de los usuarios como también
+					chequear que todo funcione bien y estar atentos a crashes y
+					bugs que vayan apareciendo. Si te interesa ayudarnos
+					mandanos un mail a testers@carpool.com.ar y dentro de 24hs
+					hábiles vamos a estar en contacto. Cada dia estamos mas
+					cerca del lanzamiento oficial!
 				</p>
 			</article>
 			<article class="blogArticle">
 				<p>6 de Julio, 2021</p>
 				<h3>Nuestra inpiración</h3>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Proin volutpat massa vel nibh ultrices facilisis. Donec
-					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
-					faucibus rutrum fermentum. Mauris volutpat quam a
-					condimentum iaculis. Nam fringilla nibh lacinia aliquam
-					sodales. In ullamcorper lorem eget ligula lobortis, et
-					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
-					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
-					euismod quis, pharetra eget quam. Nunc ornare ultricies
-					porta. Proin quis nisl consectetur, fringilla sem viverra,
-					congue felis.
+					A los 18 años me mude de Paraná, Entre Ríos a Capital
+					Federal a estudiar Ingeniería Informática, desde entonces me
+					estuve visitando mi ciudad natal principalmente en colectivo
+					pero luego de varios años conocí las comunidades de carpool
+					entre esas localidades (principalmente por facebook y grupo
+					de whatsapp) y comencé a viajar con ellos, me di cuenta que
+					era mucho mas barato, rapido y las experiencias que tuve no
+					fueron malas, pero lo que siempre fue medio desastre era la
+					organización del viaje, los medios que usaban no cumplian
+					todos los requerimientos que la comunidad poseía y al no
+					haber en el mercado otra aplicación decente al respecto
+					decidí estudiar para hacerla yo mismo…
 				</p>
 			</article>
 			<article class="blogArticle">
 				<p>1 de Abril, 2021</p>
 				<h3>Carpooleo comienza su desarrollo</h3>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Proin volutpat massa vel nibh ultrices facilisis. Donec
-					tellus erat, ornare eget tincidunt ut, mattis a lectus. Sed
-					faucibus rutrum fermentum. Mauris volutpat quam a
-					condimentum iaculis. Nam fringilla nibh lacinia aliquam
-					sodales. In ullamcorper lorem eget ligula lobortis, et
-					facilisis lorem malesuada. Ut sed metus bibendum, malesuada
-					turpis ac, lacinia elit. Vivamus dolor arcu, consequat ut
-					euismod quis, pharetra eget quam. Nunc ornare ultricies
-					porta. Proin quis nisl consectetur, fringilla sem viverra,
-					congue felis.
+					Lo que comenzó como una simple idea universitaria hoy en día
+					está en camino a convertirse en realidad! Después de
+					consultar con varios expertos, una fase larga de diseño y
+					varias horas de aprendizaje finalmente comienza el
+					desarrollo de Carpooleo, utilizaré este blog para ir dando
+					actualizaciones de los diversos progresos y también cosas
+					pertinentes a la aplicación. Tenemos un largo trecho por
+					delante pero estoy seguro de que va a valer la pena! :)
 				</p>
 			</article>
 		</section>
@@ -206,7 +202,7 @@
 			</section>
 		</footer>
 
-        <!-- Animation Script -->
+		<!-- Animation Script -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
