404 and banner changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Description y keywords -->
-		<meta name="description" content="Carpooleo es una aplicación con el objetivo de conectar personas entre ellas para compartir vehículo y ahorrar dinero a la hora de viajar">
-		<meta name="keywords" content="VIAJE, AHORRAR DINERO, COMPARTIR VEHICULO, BUSCAR PASAJEROS, BUSCAR CONDUCTOR, APLICACION, DESCARGAR APLICACION">
+		<meta
+			name="description"
+			content="Carpooleo es una aplicación con el objetivo de conectar personas entre ellas para compartir vehículo y ahorrar dinero a la hora de viajar"
+		/>
+		<meta
+			name="keywords"
+			content="VIAJE, AHORRAR DINERO, COMPARTIR VEHICULO, BUSCAR PASAJEROS, BUSCAR CONDUCTOR, APLICACION, DESCARGAR APLICACION"
+		/>
 		<!-- AOS Framework Stylesheet -->
 		<link
 			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
@@ -19,7 +25,7 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="css/scssStyles.css"/>
+		<link rel="stylesheet" href="css/scssStyles.css" />
 		<title>Carpooleo</title>
 		<link rel="shortcut icon" href="images/logo.png" />
 	</head>
@@ -85,18 +91,22 @@
 		</header>
 
 		<!-- Content -->
-		<section class="bannerSection purpleBackground">
+		<section class="bannerSection purpleBackground flexWrap">
 			<article class="bannerArticle">
 				<h2 class="bannerTitle">Una app para facilitar viajes</h2>
 				<p class="bannerText">
 					¿Buscas alguien con quien dividir costos de viaje?
 				</p>
 				<div class="bannerButtons">
-					<a href="pages/sobreNosotros.html"
-						><button class="bannerButtonPrimary">Descargar App</button></a
-					>
 					<a href="pages/producto.html"
-						><button class="bannerButtonSecondary">Leer mas</button></a
+						><button class="bannerButtonPrimary">
+							Descargar App
+						</button></a
+					>
+					<a href="pages/sobreNosotros.html"
+						><button class="bannerButtonSecondary">
+							Leer mas
+						</button></a
 					>
 				</div>
 			</article>
@@ -122,7 +132,8 @@
 					class="imgClient"
 				/>
 				<p class="cardText">
-					"Mas rapido y mas barato que viajar en colectivo, super recomendado!"
+					"Mas rapido y mas barato que viajar en colectivo, super
+					recomendado!"
 				</p>
 				<p class="cardFooter">Bautista Morelli - 24 años</p>
 			</article>
@@ -138,7 +149,8 @@
 					class="imgClient"
 				/>
 				<p class="cardText">
-					"Tenia que viajar de emergencia y no conseguia transporte, por suerte encontre esta app y me soluciono todo"
+					"Tenia que viajar de emergencia y no conseguia transporte,
+					por suerte encontre esta app y me soluciono todo"
 				</p>
 				<p class="cardFooter">Lucas Perretta - 58 años</p>
 			</article>
@@ -154,7 +166,8 @@
 					class="imgClient"
 				/>
 				<p class="cardText">
-					"Viajo continuamente por trabajo y siempre voy con lugar en el auto, perfecto para alivianar costos"
+					"Viajo continuamente por trabajo y siempre voy con lugar en
+					el auto, perfecto para alivianar costos"
 				</p>
 				<p class="cardFooter">Mateo Perez - 32 años</p>
 			</article>
