--- a/pages/producto.html
+++ b/pages/producto.html
@@ -80,7 +80,7 @@
 		</header>
 
 		<!-- Content -->
-		<section class="bannerSection purpleBackground noPaddingBottom">
+		<section class="bannerSection purpleBackground noPaddingBottom flexWrap">
 			<article class="bannerArticle">
 				<h2 class="bannerTitle">
 					Intuitiva, fácil de utilizar y segura
@@ -119,7 +119,7 @@
 				</p>
 			</article>
 		</section>
-		<section class="bannerSection purpleBackground">
+		<section class="bannerSection purpleBackground flexWrap">
 			<article class="bannerArticle">
 				<h2 class="bannerTitle">¿Que estas esperando?</h2>
 				<p class="bannerText">
