--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -104,7 +104,7 @@
 			</p>
 		</section>
 
-		<section class="bannerSection purpleBackground">
+		<section class="bannerSection purpleBackground flexWrap">
 			<article class="bannerArticle">
 				<h2 class="bannerTitle">No seremos muchos</h2>
 				<p class="bannerText">pero tenemos muchas ganas de crecer</p>
