--- a/404.html
+++ b/404.html
@@ -16,18 +16,18 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="css/scssStyles.css" />
-		<title>Carpooleo - Pagina no encontradaz</title>
-		<link rel="shortcut icon" href="images/logo.png" />
+		<link rel="stylesheet" href="/css/scssStyles.css" />
+		<title>Carpooleo - Pagina no encontrada</title>
+		<link rel="shortcut icon" href="/images/logo.png" />
 	</head>
 	<body>
 		<!-- Navbar with Collapsable -->
 		<header class="sticky-top">
 			<nav class="navbar navbar-expand-lg navbar-dark">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="index.html"
+					<a class="navbar-brand" href="/index.html"
 						><img
-							src="images/logoCarpooleo.svg"
+							src="/images/logoCarpooleo.svg"
 							alt="logo"
 							class="logo whiteSvg"
 						/>
@@ -49,29 +49,29 @@
 								<a
 									class="nav-link"
 									aria-current="page"
-									href="index.html"
+									href="/index.html"
 									>Inicio</a
 								>
 							</li>
 							<li class="nav-item ms-4">
 								<a
 									class="nav-link"
-									href="pages/sobreNosotros.html"
+									href="/pages/sobreNosotros.html"
 									>Sobre Nosotros</a
 								>
 							</li>
 							<li class="nav-item ms-4">
-								<a class="nav-link" href="pages/producto.html"
+								<a class="nav-link" href="/pages/producto.html"
 									>Producto</a
 								>
 							</li>
 							<li class="nav-item ms-4">
-								<a class="nav-link" href="pages/blog.html"
+								<a class="nav-link" href="/pages/blog.html"
 									>Blog</a
 								>
 							</li>
 							<li class="nav-item ms-4">
-								<a class="nav-link" href="pages/contacto.html"
+								<a class="nav-link" href="/pages/contacto.html"
 									>Contacto</a
 								>
 							</li>
@@ -84,7 +84,7 @@
 		<!-- Content -->
 
 		<article class="container404">
-            <img src="images/404.png" alt="Error Image" class="img404">
+			<img src="/images/404.png" alt="Error Image" class="img404" />
 			<h2>404 -La página que buscas no fue encontrada</h2>
 			<p>
 				Lo sentimos pero parece que la página que buscas no se encuentra
@@ -92,8 +92,10 @@
 				que estás utilizando la url correcta
 			</p>
 			<div>
-				<a href="index.html">
-					<button class="bannerButtonPrimary marginButton404">Volver a Inicio</button>
+				<a href="/index.html">
+					<button class="bannerButtonPrimary marginButton404">
+						Volver a Inicio
+					</button>
 				</a>
 			</div>
 		</article>
@@ -103,19 +105,19 @@
 			<article>
 				<a href=""
 					><img
-						src="images/instagram.svg"
+						src="/images/instagram.svg"
 						alt="Instagram"
 						class="icon whiteSvg"
 				/></a>
 				<a href=""
 					><img
-						src="images/youtube.svg"
+						src="/images/youtube.svg"
 						alt="YouTube"
 						class="icon whiteSvg"
 				/></a>
 				<a href=""
 					><img
-						src="images/twitter.svg"
+						src="/images/twitter.svg"
 						alt="Twitter"
 						class="icon whiteSvg"
 				/></a>
@@ -123,11 +125,11 @@
 			<section>
 				<ul class="footerLinks">
 					<li>
-						<a href="pages/sobreNosotros.html">Sobre Nosotros</a>
+						<a href="/pages/sobreNosotros.html">Sobre Nosotros</a>
 					</li>
-					<li><a href="pages/producto.html">Producto</a></li>
-					<li><a href="pages/blog.html">Blog</a></li>
-					<li><a href="pages/contacto.html">Contacto</a></li>
+					<li><a href="/pages/producto.html">Producto</a></li>
+					<li><a href="/pages/blog.html">Blog</a></li>
+					<li><a href="/pages/contacto.html">Contacto</a></li>
 				</ul>
 			</section>
 			<section class="newsletter">
@@ -140,13 +142,13 @@
 					<p>Descarga la app</p>
 					<a href=""
 						><img
-							src="images/googlePlay.svg"
+							src="/images/googlePlay.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
 					<a href=""
 						><img
-							src="images/AppStore.svg"
+							src="/images/AppStore.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
